--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,49 +5,49 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-9.90MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-10.95MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-5.80MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-15.68MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇭🇰 香港-4.45MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.39MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -55,32 +55,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -96,11 +96,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.80MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
