--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,82 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-10.74MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-15.68MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-6.77MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-544.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-2.81MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.55MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
+  - {name: 🇺🇸 美国-5.33MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.78MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-389.7KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-544.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-544.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-544.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-544.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-544.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-544.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -96,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-544.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
