--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.92MB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 17565, type: ss, cipher: chacha20-ietf-poly1305, password: 297545c2-a59d-4610-9580-a7baa3657a57}
+  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.16MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-345.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: bwg2.gushidawang.cc, port: 57539, type: vmess, uuid: fcf7202c-bd1a-44e9-a25e-bf152f6e5c11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-830.0KB/s(Youtube:不良林), server: 185.246.155.29, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇸🇬 新加坡-1.06MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.06MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-17.97MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.49MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.22MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-389.5KB/s(Youtube:不良林), server: hk003.369boy.com, port: 32502, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: hk003.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 未知国家-1.90MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-830.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 未知国家-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-830.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 未知国家-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-830.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 未知国家-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-830.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 未知国家-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-830.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 未知国家-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-830.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 未知国家-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-178.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-830.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 未知国家-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
